<resources>
    <string name="app_name">Room</string>
    <string name="first">Заголовок</string>
    <string name="second">Описание</string>
    <string name="save">Сохранить</string>
    <string name="add">Add</string>
    <string name="Add">добавить</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="singIn">Войти</string>
    <string name="savvve">сохранить</string>
</resources>