<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etFirst"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/first"/>

    <EditText
        android:id="@+id/etSecond"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:hint="@string/second"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirst" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="241dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSecond"
        android:text="@string/save"/>

</androidx.constraintlayout.widget.ConstraintLayout>